--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
 <body>
     <header><a href="ourvision.html" target="_blank">Lovely</a></header>
     <nav class="navbar">
-        <a href="ORDER-Taking-website.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="/New folder/GPT.html"target="_blank">Product</a>
-        <a href="">Prices</a>
-        <a href="mailto:nomanrafi247@gmail.com" >Contact</a>
+        <a href="https://wa.me/923167424161">Prices</a>
+        <a href="mailto:abhussainali7@gmail.com" >Contact</a>
     </nav>
     <h2>Watch Gallery</h2>
     <section class="Grocery">
         
-        <div class="ad" id="A1">1</div>
+        <div class="ad" id="A1">Ultra Watch</div>
         <div class="ad" id="A2">2</div>
         <div class="ad" id="A3">3</div>
         <div class="ad" id="A4">4</div>
